--- a/style.css
+++ b/style.css
@@ -30,13 +30,16 @@
    .visibility{
     visibility: hidden;
    }
-   
+
 
 }
 @media only screen and (min-width:688px) and (max-width:992px){
     .visibility {
             visibility: hidden;
         }
+    .visibility-course{
+        visibility: hidden;
+    }
 
 }
 
